Rename XmlPdf to PdfGen, some changes in PdfGenRepresentation